# jazz-hands-v2

./: .gitignore  Dockerfile  LICENSE  flake.nix  modeling.js  modeling.py  pyproject.toml  server.py
static/: frontend.js  index.html  inference.js  modeling.js  recorder-processor.js
