[project]
name = "jazz-hands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "hopfield-layers",
    "torch>=2.7.0",
]

[tool.uv.sources]
hopfield-layers = { git = "https://github.com/ml-jku/hopfield-layers" }
